  * Added a Windows icon for the resize widget.  Thanks Otto Greenslade!
  * Disable the alpha warning, albeit late.
  * Add a command line option to not install a bootloader
    (-b, --no-bootloader) (LP: #615033).
  * Do not show 'free space' partitions in the bootloader target
    combobox (LP: #615033).
  * Meet the Geonames.org CC license requirements by adding 'Geonames.org'
    to the map.

  [ Mario Limonciello ]
  * Restore the functionality of the noninteractive frontend.
  * Disable GVFS fuse daemon while in ubiquity-dm
  * Remove oem user with userdel rather than deluser (the latter didn't support
    doing it while oem was logged in) (LP: #624888)
  * Run oem-config-wrapper as the user oem rather than root.
    - Fixes issues with pulseaudio applet not working
    - Prevents root terminals from ctrl-alt-t (LP: #594233)
  * Disable general terminals from ctrl-alt-t unless running in debug mode.
    (LP: #594233)
  * Grab focus of the slideshow when it starts, keeping focus off the expander
    in automatic mode.
  * Don't allow progressing past the language page unless a valid language is
    picked.
  * Fix progressbar reporting messages reporting missing from plugininstall.py
    in ubiquity or oem-config.

  [ Colin Watson ]
  * GTK frontend: Make user-setup entry boxes activate the Forward button
    when Enter is pressed.
  * Revert Debug::identcdrom=true for writable USB media; with changes in
    apt 0.8.3ubuntu3, this is sufficient for stable apt-cdrom identification
    of writable USB media (LP: #628290).

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 13 Sep 2010 18:14:20 +0100

ubiquity (2.3.17) maverick; urgency=low

  [ Evan Dandrea ]
  * Fetch the translations for the release_notes_only and
    update_installer_only strings (LP: #629627).
  * Don't use the same name for the error method and GTK label
    (LP: #631046).
  * Re-use the valid username check from user-setup in the GTK UI
    (LP: #631046).