@@ -1076,6 +1076,13 @@ Type: boolean
 Default: false
 Description: for internal use; use non-free software.
 
+Template: ubiquity/nonfree_package
+Type: text
+Default: ubuntu-restricted-addons
+Description: for internal use; can be preseeded
+ The package that will be installed when the proprietary extras package is
+ installed
+
 Template: ubiquity/download_updates
 Type: boolean
 Default: false
